Atualização site HDMTI

--- a/resp/global.css
+++ b/resp/global.css
@@ -2,4 +2,5 @@
 @import './global.css';
 @import './header.css';
 @import './servicos.css';
-@import './footer.css'
+@import './footer.css';
+@import './parceiros.css';
