--- a/resp/header.css
+++ b/resp/header.css
@@ -6,6 +6,12 @@
     .logo {
       margin-bottom: 20px;
     }
+
+    .logo img{
+      width: 150px;
+      margin: 0 auto;
+      float: left;
+    }
   
     .nav-links {
       display: none;
@@ -20,7 +26,7 @@
     }
   
     .content h1 {
-      font-size: 24px;
+      font-size: 20px;
     }
   
     .content p {
