--- a/resp/clientes.css
+++ b/resp/clientes.css
@@ -13,7 +13,7 @@
         min-width: 100%;
     }
     .carousel-section h2{
-        font-size: 30px;
+        font-size: 2.5rem;
         }
 
         .carousel-section p{
@@ -22,7 +22,7 @@
         }
 
         .carousel-item img{
-            width: 220px;
+            width: 150px;
         }
 
   }
