--- a/resp/parceiros.css
+++ b/resp/parceiros.css
@@ -6,6 +6,13 @@
     .partners-section p{
       font-size: 1rem;
     }
+
+    .partners-header h2 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin: 10px 0;
+      color: #000000;
+    }
   }
   
   @media (max-width: 480px) {
